--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,4 @@
 {
   "buildCommand": "echo 'No build needed'",
-  "outputDirectory": "frontend",
-  "cleanUrls": true,
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/frontend/$1"
-    }
-  ]
+  "outputDirectory": "frontend"
 }
