Add Vercel cache headers and meta tags to prevent HTML caching

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,24 @@
 {
   "buildCommand": "echo 'No build needed'",
-  "outputDirectory": "frontend"
+  "outputDirectory": "frontend",
+  "headers": [
+    {
+      "source": "/index.html",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        }
+      ]
+    },
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=3600"
+        }
+      ]
+    }
+  ]
 }
